--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,6 @@
             height: 100px;
             background-color: #5AABF3;
             display: flex;
-            justify-content: space-between;
             align-items: center;
             color: #ECD101;
             padding: 0 40px;
@@ -52,7 +51,7 @@
             font-size: 65px;
             padding: 0 40px;
             position: fixed;
-            top: 10px;
+            top: 0px;
             left: 20px;
             color: #ECD101;
             font-size: 65px;
@@ -61,6 +60,9 @@
         }
 
         .title {
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
             font-size: 36px;
             font-weight: bold;
             color: #ECD101;
@@ -70,14 +72,13 @@
                 -1px 1px 0 #C64036,
                 1px 1px 0 #C64036;
             text-align: center;
-            flex-grow: 1;
         }
 
         .profile {
+            margin-left: auto;
             color: #ECD101;
             font-size: 20px;
             padding: 0 30px;
-            margin-top: 30px;
         }
 
         .note-icons {
@@ -209,7 +210,6 @@
         }
 
         .container {
-            margin-top: 120px; /* Space for header */
             margin-left: 20px;
             transition: margin-left 0.3s;
         }
