Pushing UI changes to topArtist

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Unwrapped{% endblock %}</title>
+
+    <!-- Google Fonts and other Head Resources -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Notable&display=swap" rel="stylesheet">
+
     <style>
-        /* CSS Styles for base layout */
+        /* Global Styles */
         * {
             box-sizing: border-box;
             margin: 0;
@@ -18,20 +21,21 @@
 
         body {
             font-family: 'Notable', sans-serif;
-            background-image: url("{% static 'home/background.png' %}");
             background-repeat: no-repeat;
             background-size: cover;
-            background-position: center top 100px;
+            background-position: center top;
         }
 
+        /* Fixed Header */
         .header {
-            width: 100vw;
+            width: 100%;
             height: 100px;
             background-color: #5AABF3;
             display: flex;
-            justify-content: center;
+            justify-content: space-between;
             align-items: center;
             color: #ECD101;
+            padding: 0 40px;
             position: fixed;
             top: 0;
             left: 0;
@@ -40,9 +44,7 @@
 
         .menu-icon {
             color: #ECD101;
-            font-size: 50px;
-            position: absolute;
-            left: 20px;
+            font-size: 65px;
         }
 
         .title {
@@ -50,27 +52,42 @@
             font-weight: bold;
             color: #ECD101;
             text-shadow:
-                -1px -1px 0 #FF5733,
-                1px -1px 0 #FF5733,
-                -1px 1px 0 #FF5733,
-                1px 1px 0 #FF5733;
+                -1px -1px 0 #C64036,
+                1px -1px 0 #C64036,
+                -1px 1px 0 #C64036,
+                1px 1px 0 #C64036;
+            text-align: center;
+            flex-grow: 1;
         }
 
         .profile {
             color: #ECD101;
-            font-size: 24px;
-            position: absolute;
-            right: 20px;
+            font-size: 20px;
+        }
+
+        /* Main Container for Page Content */
+        .container {
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            {% block container_style %}{% endblock %}  /* Allow custom styles for child templates */
         }
     </style>
+
+    {% block head %}
+    <!-- Additional CSS or JavaScript for specific pages can go here -->
+    {% endblock %}
 </head>
 <body>
+    <!-- Navigation Header -->
     <div class="header">
         <div class="menu-icon">☰</div>
         <div class="title">UNWRAPPED</div>
         <div class="profile">PROFILE</div>
     </div>
 
+    <!-- Main Content Area -->
     <div class="container">
         {% block content %}
         <!-- Page-specific content goes here -->
