--- a/templates/home.html
+++ b/templates/home.html
@@ -195,7 +195,7 @@
         </div>
 
         <div class="button-wrapper">
-            <a href="{% url 'stats' %}" class="view-unwrapped">VIEW UNWRAPPED</a>
+            <a href="{% url 'top_artist' %}" class="view-unwrapped">VIEW UNWRAPPED</a>
         </div>
     </div>
 
